# bili_ticket_rush_tauri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
crates/backend/: Cargo.toml
crates/backend/src/: api.rs  dungeon.rs  lib.rs  show_orderlist.rs  taskmanager.rs
crates/backend/src/taskmanager/: grab_ticket_handler.rs  login_handler.rs  mod.rs  order_handler.rs  push_handler.rs  ticket_handler.rs
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: account.rs  captcha.rs  config.rs  cookie_manager.rs  http_utils.rs  lib.rs  login.rs  machine_id.rs  push.rs  record_log.rs  taskmanager.rs  ticket.rs  utils.rs  web_ck_obfuscated.rs
crates/frontend/: Cargo.toml  tauri.conf.json
crates/frontend/src/: main.rs  state.rs  utils.rs
crates/frontend/src/commands/: account.rs  auth.rs  general.rs  mod.rs  task.rs  ticket.rs
crates/frontend/web/: app.js  index.html  style.css
