[workspace]
members = [
    "crates/frontend",
    "crates/backend",
    "crates/common",
    "crates/cli"
]

resolver = "2"

[workspace.package]
version = "7.0.0"
edition = "2024"
authors = ["biliticket"]
license = "AGPL-3.0"
description = "B站会员购自动抢票工具"
repository = "https://github.com/biliticket/bili_ticket_rush"
readme = "README.md"
keywords = ["bilibili", "ticket", "rush", "automation"]
categories = ["gui", "automation"]

[patch.crates-io]
ort = { git="https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"