[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.20", features = ["v4"] }
chrono = "0.4"

log = "0.4"
env_logger = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version="0.11.27", features=["json", "blocking"]}

rand = "0.8"

base64 = "0.22"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.8"
