[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
rand = "0.8"
base64 = "0.21"

once_cell = "1.21"
aes = "0.7.5"
block-modes = "0.8.1"
machine-uid = "0.5.4"
lazy_static = "1.5"
image = "0.25"
whoami = "1.6.1"
ctrlc = "3.5.1"
md5 = "0.7.0"
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
cookie = "0.16"
fs2 = "0.4.3"
single-instance = "0.3.3"

bili_ticket_gt = { git = "https://github.com/Amorter/biliTicker_gt", branch = "rust" }

reqwest = { version = "0.11.27", features = ["json", "blocking", "cookies"] }
uuid = { version = "1.20", features = ["v4", "fast-rng"] }
rsa = "0.9"
