[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json", "blocking", "cookies"] }
chrono = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.21"
jsonwebtoken = "9"
qrcode = "0.14.1"
image = "0.25"
futures-util = "0.3"

log = "0.4"
env_logger = "0.9"

common = { path = "../common" }
backend = { path = "../backend" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
